--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
   <!-- website logo -->
-  <link rel="icon" href="images/weblogo2.png" type="image/icon type">
+  <link rel="icon" href="images/weblogo.png" type="image/icon type">
 </head>
 
 <body style="overflow: hidden;">
@@ -283,7 +283,7 @@
     </div>
 
 <!-- <button type="submit" class="btn" name="websubmit" onclick="websitedevelopmentmail()">SEND</button> -->
-    <a href="mailto:aboluwatife70@yahoo.com?subject=Enquiries On Website Design(uzorsydney.tech)"><button type="button" class="btn" onclick="websitedesignmail()">SEND</button></a>
+    <a href="mailto:aboluwatife70@yahoo.com?subject=Enquiries On Website Design(eafolabitech.com)"><button type="button" class="btn" onclick="websitedesignmail()">SEND</button></a>
      <!--<button type="submit" class="btn" name="websubmit" onclick="">SEND</button>-->
     <button type="button" class="btn cancel" onclick="closeForm1()">Cancle</button>
   </form>
@@ -312,7 +312,7 @@
     <input type="text" value="GRAPHICS DESIGN" name="webservice" readonly required>
 
     <!-- <button type="submit" class="btn" name="websubmit" onclick="graphicsdesignmail()">SEND</button> -->
-    <a href="mailto:aboluwatife70@yahoo.com?subject=Enquiries On Graphics Design(uzorsydney.tech)"><button type="button" class="btn" onclick="websitedesignmail()">SEND</button></a>
+    <a href="mailto:aboluwatife70@yahoo.com?subject=Enquiries On Graphics Design(eafolabitech.com)"><button type="button" class="btn" onclick="websitedesignmail()">SEND</button></a>
     <button type="button" class="btn cancel" onclick="closeForm2()">Cancle</button>
   </form>
 </div>
@@ -338,7 +338,7 @@
     <input type="text" value="WEBSITE DEVELOPMENT" name="webservice" readonly required>
 
     <!-- <button type="submit" class="btn" name="websubmit" onclick="websitedevelopmentmail()">SEND</button> -->
-    <a href="mailto:aboluwatife70@yahoo.com?subject=Enquiries On Website Development(uzorsydney.tech)"><button type="button" class="btn" onclick="websitedesignmail()">SEND</button></a>
+    <a href="mailto:aboluwatife70@yahoo.com?subject=Enquiries On Website Development(eafolabitech.com)"><button type="button" class="btn" onclick="websitedesignmail()">SEND</button></a>
     <button type="button" class="btn cancel" onclick="closeForm3()">Cancle</button>
   </form>
 </div>
@@ -366,7 +366,7 @@
     <input type="text" value="PRODUCT DESIGN" name="webservice" readonly required>
 
     <!-- <button type="submit" class="btn" name="websubmit" onclick="productdesignmail()">SEND</button> -->
-    <a href="mailto:aboluwatife70@yahoo.com?subject=Enquiries On Product Design(uzorsydney.tech)"><button type="button" class="btn" onclick="websitedesignmail()">SEND</button></a>
+    <a href="mailto:aboluwatife70@yahoo.com?subject=Enquiries On Product Design(eafolabitech.com)"><button type="button" class="btn" onclick="websitedesignmail()">SEND</button></a>
     <button type="button" class="btn cancel" onclick="closeForm4()">Cancle</button>
   </form>
 </div>
@@ -392,7 +392,7 @@
     <input type="text" value="TAKE CLASSES" name="webservice" readonly required>
 
     <!-- <button type="submit" class="btn" name="websubmit" onclick="adsvideodesignmail()">SEND</button> -->
-    <a href="mailto:aboluwatife70@yahoo.com?subject=Enquiries On Take Classes(uzorsydney.tech)"><button type="button" class="btn" onclick="websitedesignmail()">SEND</button></a>
+    <a href="mailto:aboluwatife70@yahoo.com?subject=Enquiries On Take Classes(eafolabitech.com)"><button type="button" class="btn" onclick="websitedesignmail()">SEND</button></a>
     <button type="button" class="btn cancel" onclick="closeForm5()">Cancle</button>
   </form>
 </div>
@@ -420,7 +420,7 @@
     <input type="text" value="APPLICATION DESIGN" name="webservice" readonly required>
 
     <!-- <button type="submit" class="btn" name="websubmit" onclick="applicationdesignmail">SEND</button> -->
-    <a href="mailto:aboluwatife70@yahoo.com?subject=Enquiries On Application Design(uzorsydney.tech)"><button type="button" class="btn" onclick="websitedesignmail()">SEND</button></a>
+    <a href="mailto:aboluwatife70@yahoo.com?subject=Enquiries On Application Design(eafolabitech.com)"><button type="button" class="btn" onclick="websitedesignmail()">SEND</button></a>
     <button type="button" class="btn cancel" onclick="closeForm6()">Cancle</button>
   </form>
 </div>
@@ -680,7 +680,7 @@ function showDivs(n) {
                     </h6>
                   </div>
                 </a>
-                <a href="mailto:aboluwatife70@yahoo.com?subject=Enquiries On Website(uzorsydney.tech)" target="blank" class="link-box">
+                <a href="mailto:aboluwatife70@yahoo.com?subject=Enquiries On Website(eafolabitech.com)" target="blank" class="link-box">
                   <div class="img-box">
                     <img src="images/mail.png" alt="" />
                   </div>
