--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta content="affordable, price, money, market, best, EATech, Emmanuel, Dracodes, design, icode, idesign, facebook, twitter, instagram, www.instagram.com/nlkdraco/, nlkdraco, draco, Afolabi, Boluwatife, Emmanuel, services, sydney.tech, EATech, EATech, all, a-z, is, yes, and, no, google, business, legit, price, webistedesign, web, site, broker, onlinebanking, template, temp, love, sweet, best, top5, top 5" name="keywords">
     <meta content="Deals like website, graphics, design, development, mobile, application, etc, e.t.c" name="description">
 
-  <title>Icode|Idesign|Websites|Apps|Graphics|Video</title>
+  <title>EAFOLABITECH</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="../cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -123,11 +123,11 @@
                 <div class="carousel-item active">
                   <div class="detail-box">
                     <h1>
-                      Hi🙂 <br />
-                      i'm Emmanuel
+                      Welcome to my Portfolio <br />
+                      I'm Emmanuel
                     </h1>
                     <p>
-                      I'm an Expert in Website design/dev, i have a few professional Projects Executed and under Management in My Portfolio.....
+                      I'm an Expert in Website design/dev, I have a few professional Projects Executed and under Management in My Portfolio...
                     </p>
                     <div>
                       <a href="images/Boluwatife Emmanuel Resume pt1.pdf" download="Afolabi Emmanuel(CV)">
@@ -139,11 +139,11 @@
                 <div class="carousel-item">
                   <div class="detail-box">
                     <h1>
-                      Hi🙂 <br />
-                      i'm Emmanuel
+                      Welcome to my Portfolio <br />
+                      I'm Emmanuel
                     </h1>
                     <p>
-                      I'm skilled in producing wonderful, seamless & visual Layouts that represents the appearance of your Brand / Company......
+                      I'm skilled in producing wonderful, seamless & visual Layouts that represents the appearance of your Brand/Company...
                     </p>
                     <div>
                       <a href="images/Boluwatife Emmanuel Resume pt1.pdf" download="Afolabi Emmanuel(CV)">
@@ -262,7 +262,7 @@
           <div class="box b1">
             <div class="img-box">
               <style type="text/css">
-                .fontss{font-weight: bold;font-size: 30px;color: white!important;box-shadow: 5px -10px 10px #FAD932}
+                .fonts{font-weight: bold;font-size: 30px;color: white!important;box-shadow: 5px -10px 10px #FAD932}
                 .box:hover{cursor: pointer;}
                 .hirebtn{background-color: #FAD932;border: none;color: white;padding: 10px 15px;text-align: center;text-decoration: none;display: inline-block;font-size: 16px;transition: 0.5s}
                 .hirebtn:hover{background-color: transparent;border: 5px solid #FAD932;color: white;padding: 10px 15px;text-align: center;text-decoration: none;display: inline-block;font-size: 14px;}
