--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         
       </div>
       <div id="iframevid" class="about-img" style="display: none;justify-content: center;align-items: center;transform: rotate(0);">
-        <iframe style="" width="100%" height="400px" src="https://www.youtube.com/embed/OJ20weQbnp4?si=TmZ5rfMyY5fLerX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe style type="" width="100%" height="400px" src="https://www.youtube.com/embed/OJ20weQbnp4?si=TmZ5rfMyY5fLerX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
       <img src="images/about-img.png" class="about-img" alt="" id="playpicjs" style="display: block;" />
     </div>
