--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -33,7 +32,7 @@
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
   <!-- website logo -->
-  
+  <link rel="icon" href="images/weblogo.png" type= "image/icon type">
 </head>
 
 <body style="overflow: hidden;">
