--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta content="affordable, price, money, market, best, EATech, Emmanuel, Dracodes, design, icode, idesign, facebook, twitter, instagram, www.instagram.com/nlkdraco/, nlkdraco, draco, Afolabi, Boluwatife, Emmanuel, services, sydney.tech, EATech, EATech, all, a-z, is, yes, and, no, google, business, legit, price, webistedesign, web, site, broker, onlinebanking, template, temp, love, sweet, best, top5, top 5" name="keywords">
     <meta content="Deals like website, graphics, design, development, mobile, application, etc, e.t.c" name="description">
 
-  <title>EAFOLABITECH</title>
+  <title>JacodeTech</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="../cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -129,8 +129,8 @@
                       I'm an Expert in Website design/dev, I have a few professional Projects Executed and under Management in My Portfolio...
                     </p>
                     <div>
-                      <a href="images/Boluwatife Emmanuel Resume pt1.pdf" download="Afolabi Emmanuel(CV)">
-                        get my cv
+                      <a href="images/Boluwatife Afolabi Resume PT 2_2.pdf" download="Afolabi Emmanuel(CV)">
+                        Get my CV
                       </a>
                     </div>
                   </div>
@@ -145,8 +145,8 @@
                       I'm skilled in producing wonderful, seamless & visual Layouts that represents the appearance of your Brand/Company...
                     </p>
                     <div>
-                      <a href="images/Boluwatife Emmanuel Resume pt1.pdf" download="Afolabi Emmanuel(CV)">
-                        get my cv
+                      <a href="images/Boluwatife Afolabi Resume PT 2_2.pdf" download="Afolabi Emmanuel(CV)">
+                        Get my CV
                       </a>
                     </div>
                   </div>
@@ -727,7 +727,7 @@ function showDivs(n) {
                 <a href="https://twitter.com/heznald">
                   <img src="images/twitter.png" alt="" />
                 </a>
-                <a href="https://www.linkedin.com">
+                <a href="https://www.linkedin.com/in/boluwatife-afolabi-e-336521333/">
                   <img src="images/linkedin.png" alt="" />
                 </a>
                 <a href="https://www.instagram.com/nlkdraco">
