--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
   <!-- website logo -->
-  <link rel="icon" href="images/weblogo.png" type= "image/icon type">
+  <link rel="icon" href="images/JacodeTech.png" type= "image/icon type">
 </head>
 
 <body style="overflow: hidden;">
