--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 </head>
 
 <body style="overflow: hidden;">
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1639044836777380"
+     crossorigin="anonymous"></script>
+  
 <style type="text/css">
   #myBtnn {
   display: none; /* Hidden by default */
